Make continue textview Invisible

--- a/app/src/main/res/layout/activity_music_preference.xml
+++ b/app/src/main/res/layout/activity_music_preference.xml
@@ -364,6 +364,7 @@
         android:textColor="@color/colorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        android:visibility="invisible"
         app:layout_constraintHorizontal_bias="0.946"
         app:layout_constraintStart_toEndOf="@+id/skip" />
 
