clean up the code

--- a/app/src/main/res/layout/activity_music_preference.xml
+++ b/app/src/main/res/layout/activity_music_preference.xml
@@ -14,8 +14,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="150dp"
         android:fontFamily="sans-serif-black"
-        android:text="What should Your Listening Friends Call you?"
-        android:textAllCaps="true"
+        android:text="WHAT SHOULD mBEATERS CALL YOU?"
         android:textColor="@color/colorWhite"
         android:textSize="25sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -24,332 +23,17 @@
 
     <EditText
         android:layout_width="match_parent"
+        android:id="@+id/beatName"
         android:padding="20dp"
         android:layout_marginTop="50dp"
         android:layout_margin="50dp"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="@+id/pref_heading"
         android:hint="Your Name"
+        android:backgroundTint="@color/colorPrimary"
         android:textColor="@color/colorPrimary"
         android:textColorHint="@color/colorPrimary"
         app:layout_constraintTop_toBottomOf="@+id/pref_heading"/>
-<!--    <androidx.cardview.widget.CardView-->
-<!--        android:id="@+id/mGospel"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_below="@+id/pref_heading"-->
-<!--        android:layout_marginTop="32dp"-->
-<!--        app:cardBackgroundColor="@color/colorPrimary"-->
-<!--        app:cardCornerRadius="10dp"-->
-<!--        app:cardElevation="2dp"-->
-<!--        app:layout_constraintStart_toStartOf="@+id/pref_heading"-->
-<!--        app:layout_constraintTop_toBottomOf="@+id/pref_heading">-->
-
-<!--        <TextView-->
-<!--            android:id="@+id/card_mGospel"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:paddingStart="10dp"-->
-<!--            android:paddingLeft="10dp"-->
-<!--            android:paddingTop="5dp"-->
-<!--            android:paddingEnd="10dp"-->
-<!--            android:paddingRight="10dp"-->
-<!--            android:paddingBottom="5dp"-->
-<!--            android:text="@string/gospel"-->
-
-<!--            android:textColor="@color/colorWhite"-->
-<!--            android:textSize="15sp" />-->
-<!--    </androidx.cardview.widget.CardView>-->
-
-<!--    <androidx.cardview.widget.CardView-->
-<!--        android:id="@+id/mReggae"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_marginStart="24dp"-->
-<!--        app:cardBackgroundColor="@color/colorPrimary"-->
-<!--        app:cardCornerRadius="10dp"-->
-<!--        app:cardElevation="2dp"-->
-<!--        app:layout_constraintStart_toEndOf="@+id/mGospel"-->
-<!--        app:layout_constraintTop_toTopOf="@+id/mGospel">-->
-<!--        <TextView-->
-<!--            android:id="@+id/card_mReggae"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_below="@+id/pref_heading"-->
-<!--            android:layout_toEndOf="@+id/mReggae"-->
-<!--            android:paddingStart="10dp"-->
-<!--            android:paddingTop="5dp"-->
-<!--            android:paddingEnd="10dp"-->
-<!--            android:paddingBottom="5dp"-->
-<!--            android:text="@string/reggae"-->
-<!--            android:textColor="@color/colorWhite"-->
-<!--            android:textSize="15sp"-->
-<!--             />-->
-
-<!--    </androidx.cardview.widget.CardView>-->
-
-<!--    <androidx.cardview.widget.CardView-->
-<!--        android:id="@+id/mRumba"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_marginStart="24dp"-->
-<!--        app:cardBackgroundColor="@color/colorPrimary"-->
-<!--        app:cardCornerRadius="10dp"-->
-<!--        app:cardElevation="2dp"-->
-<!--        app:layout_constraintStart_toEndOf="@+id/mReggae"-->
-<!--        app:layout_constraintTop_toTopOf="@+id/mReggae">-->
-
-<!--        <TextView-->
-<!--            android:id="@+id/card_mRumba"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:paddingStart="10dp"-->
-<!--            android:paddingTop="5dp"-->
-<!--            android:paddingEnd="10dp"-->
-<!--            android:paddingBottom="5dp"-->
-<!--            android:text="@string/rumba"-->
-<!--            android:textColor="@color/colorWhite"-->
-<!--            android:textSize="15sp" />-->
-<!--    </androidx.cardview.widget.CardView>-->
-
-<!--    <androidx.cardview.widget.CardView-->
-<!--        android:id="@+id/mRnB"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_below="@+id/pref_heading"-->
-<!--        android:layout_marginStart="24dp"-->
-<!--        android:layout_toEndOf="@+id/mRumba"-->
-<!--        app:cardBackgroundColor="@color/colorPrimary"-->
-<!--        app:cardCornerRadius="10dp"-->
-<!--        app:cardElevation="2dp"-->
-<!--        app:layout_constraintStart_toEndOf="@+id/mRumba"-->
-<!--        app:layout_constraintTop_toTopOf="@+id/mRumba">-->
-
-<!--        <TextView-->
-<!--            android:id="@+id/card_mRnB"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:paddingStart="10dp"-->
-<!--            android:paddingTop="5dp"-->
-<!--            android:paddingEnd="10dp"-->
-<!--            android:paddingBottom="5dp"-->
-<!--            android:text="@string/rnb"-->
-<!--            android:textColor="@color/colorWhite"-->
-<!--            android:textSize="15sp" />-->
-<!--    </androidx.cardview.widget.CardView>-->
-
-<!--    <androidx.cardview.widget.CardView-->
-<!--        android:id="@+id/mTechno"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_below="@+id/pref_heading"-->
-<!--        android:layout_toEndOf="@+id/mRumba"-->
-<!--        app:cardBackgroundColor="@color/colorPrimary"-->
-<!--        app:cardCornerRadius="10dp"-->
-<!--        app:cardElevation="2dp"-->
-<!--        android:layout_marginTop="15dp"-->
-<!--        app:layout_constraintStart_toStartOf="@id/mGospel"-->
-<!--        app:layout_constraintTop_toBottomOf="@+id/mGospel">-->
-
-<!--        <TextView-->
-<!--            android:id="@+id/card_mTechno"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:paddingStart="10dp"-->
-<!--            android:paddingTop="5dp"-->
-<!--            android:paddingEnd="10dp"-->
-<!--            android:paddingBottom="5dp"-->
-<!--            android:text="@string/techno"-->
-<!--            android:textColor="@color/colorWhite"-->
-<!--            android:textSize="15sp" />-->
-<!--    </androidx.cardview.widget.CardView>-->
-
-<!--    <androidx.cardview.widget.CardView-->
-<!--        android:id="@+id/mSoul"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_below="@+id/pref_heading"-->
-<!--        android:layout_marginStart="24dp"-->
-<!--        android:layout_marginTop="15dp"-->
-<!--        android:layout_toEndOf="@+id/mRumba"-->
-<!--        app:cardBackgroundColor="@color/colorPrimary"-->
-<!--        app:cardCornerRadius="10dp"-->
-<!--        app:cardElevation="2dp"-->
-<!--        app:layout_constraintStart_toEndOf="@id/mTechno"-->
-<!--        app:layout_constraintTop_toBottomOf="@+id/mGospel">-->
-
-<!--        <TextView-->
-<!--            android:id="@+id/card_mSoul"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:paddingStart="10dp"-->
-<!--            android:paddingTop="5dp"-->
-<!--            android:paddingEnd="10dp"-->
-<!--            android:paddingBottom="5dp"-->
-<!--            android:text="@string/soul"-->
-<!--            android:textColor="@color/colorWhite"-->
-<!--            android:textSize="15sp" />-->
-<!--    </androidx.cardview.widget.CardView>-->
-
-<!--    <androidx.cardview.widget.CardView-->
-<!--        android:id="@+id/mCountry"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_below="@+id/pref_heading"-->
-<!--        android:layout_marginStart="24dp"-->
-<!--        android:layout_marginTop="15dp"-->
-<!--        android:layout_toEndOf="@+id/mRumba"-->
-<!--        app:cardBackgroundColor="@color/colorPrimary"-->
-<!--        app:cardCornerRadius="10dp"-->
-<!--        app:cardElevation="2dp"-->
-<!--        app:layout_constraintStart_toEndOf="@id/mSoul"-->
-<!--        app:layout_constraintTop_toBottomOf="@+id/mGospel">-->
-
-<!--        <TextView-->
-<!--            android:id="@+id/card_mCountry"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:paddingStart="10dp"-->
-<!--            android:paddingTop="5dp"-->
-<!--            android:paddingEnd="10dp"-->
-<!--            android:paddingBottom="5dp"-->
-<!--            android:text="@string/country"-->
-<!--            android:textColor="@color/colorWhite"-->
-<!--            android:textSize="15sp" />-->
-<!--    </androidx.cardview.widget.CardView>-->
-
-<!--    <androidx.cardview.widget.CardView-->
-<!--        android:id="@+id/mHiphop"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_below="@+id/pref_heading"-->
-<!--        android:layout_marginStart="24dp"-->
-<!--        android:layout_marginTop="15dp"-->
-<!--        android:layout_toEndOf="@+id/mRumba"-->
-<!--        app:cardBackgroundColor="@color/colorPrimary"-->
-<!--        app:cardCornerRadius="10dp"-->
-<!--        app:cardElevation="2dp"-->
-<!--        app:layout_constraintStart_toEndOf="@id/mCountry"-->
-<!--        app:layout_constraintTop_toBottomOf="@+id/mGospel">-->
-
-<!--        <TextView-->
-<!--            android:id="@+id/card_mHiphop"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:paddingStart="10dp"-->
-<!--            android:paddingTop="5dp"-->
-<!--            android:paddingEnd="10dp"-->
-<!--            android:paddingBottom="5dp"-->
-<!--            android:text="@string/hip_hop"-->
-<!--            android:textColor="@color/colorWhite"-->
-<!--            android:textSize="15sp" />-->
-<!--    </androidx.cardview.widget.CardView>-->
-
-<!--    <androidx.cardview.widget.CardView-->
-<!--        android:id="@+id/mJazz"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_below="@+id/pref_heading"-->
-<!--        android:layout_toEndOf="@+id/mRumba"-->
-<!--        app:cardBackgroundColor="@color/colorPrimary"-->
-<!--        app:cardCornerRadius="10dp"-->
-<!--        app:cardElevation="2dp"-->
-<!--        android:layout_marginTop="15dp"-->
-<!--        app:layout_constraintStart_toStartOf="@id/mTechno"-->
-<!--        app:layout_constraintTop_toBottomOf="@+id/mTechno">-->
-
-<!--        <TextView-->
-<!--            android:id="@+id/card_mJazz"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:paddingStart="10dp"-->
-<!--            android:paddingTop="5dp"-->
-<!--            android:paddingEnd="10dp"-->
-<!--            android:paddingBottom="5dp"-->
-<!--            android:text="@string/jazz"-->
-<!--            android:textColor="@color/colorWhite"-->
-<!--            android:textSize="15sp" />-->
-<!--    </androidx.cardview.widget.CardView>-->
-
-<!--    <androidx.cardview.widget.CardView-->
-<!--        android:id="@+id/mRock"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_below="@+id/pref_heading"-->
-<!--        android:layout_marginStart="24dp"-->
-<!--        android:layout_marginTop="15dp"-->
-<!--        android:layout_toEndOf="@+id/mRumba"-->
-<!--        app:cardBackgroundColor="@color/colorPrimary"-->
-<!--        app:cardCornerRadius="10dp"-->
-<!--        app:cardElevation="2dp"-->
-<!--        app:layout_constraintStart_toEndOf="@id/mJazz"-->
-<!--        app:layout_constraintTop_toBottomOf="@+id/mTechno">-->
-
-<!--        <TextView-->
-<!--            android:id="@+id/card_mRock"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:paddingStart="10dp"-->
-<!--            android:paddingTop="5dp"-->
-<!--            android:paddingEnd="10dp"-->
-<!--            android:paddingBottom="5dp"-->
-<!--            android:text="@string/rock"-->
-<!--            android:textColor="@color/colorWhite"-->
-<!--            android:textSize="15sp" />-->
-<!--    </androidx.cardview.widget.CardView>-->
-
-<!--    <androidx.cardview.widget.CardView-->
-<!--        android:id="@+id/mInstrumental"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_below="@+id/pref_heading"-->
-<!--        android:layout_marginStart="24dp"-->
-<!--        android:layout_marginTop="15dp"-->
-<!--        app:cardBackgroundColor="@color/colorPrimary"-->
-<!--        app:cardCornerRadius="10dp"-->
-<!--        app:cardElevation="2dp"-->
-<!--        app:layout_constraintStart_toEndOf="@id/mRock"-->
-<!--        app:layout_constraintTop_toBottomOf="@+id/mTechno">-->
-
-<!--        <TextView-->
-<!--            android:id="@+id/card_mInstrumental"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:paddingStart="10dp"-->
-<!--            android:paddingTop="5dp"-->
-<!--            android:paddingEnd="10dp"-->
-<!--            android:paddingBottom="5dp"-->
-<!--            android:text="@string/instrumental"-->
-<!--            android:textColor="@color/colorWhite"-->
-<!--            android:textSize="15sp" />-->
-<!--    </androidx.cardview.widget.CardView>-->
-
-<!--    <androidx.cardview.widget.CardView-->
-<!--        android:id="@+id/mPop"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_below="@+id/pref_heading"-->
-<!--        android:layout_marginStart="24dp"-->
-<!--        android:layout_marginTop="15dp"-->
-<!--        android:layout_toEndOf="@+id/mRumba"-->
-<!--        app:cardBackgroundColor="@color/colorPrimary"-->
-<!--        app:cardCornerRadius="10dp"-->
-<!--        app:cardElevation="2dp"-->
-<!--        app:layout_constraintStart_toEndOf="@id/mInstrumental"-->
-<!--        app:layout_constraintTop_toBottomOf="@+id/mTechno">-->
-
-<!--        <TextView-->
-<!--            android:id="@+id/card_mPop"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:paddingStart="10dp"-->
-<!--            android:paddingTop="5dp"-->
-<!--            android:paddingEnd="10dp"-->
-<!--            android:paddingBottom="5dp"-->
-<!--            android:text="@string/pop"-->
-<!--            android:textColor="@color/colorWhite"-->
-<!--            android:textSize="15sp" />-->
-<!--    </androidx.cardview.widget.CardView>-->
 
     <TextView
         android:id="@+id/skip"
@@ -360,6 +44,7 @@
         android:text="@string/skip"
         android:textColor="@color/colorWhite"
         app:layout_constraintBottom_toBottomOf="parent"
+        android:visibility="invisible"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
