--- a/app/src/main/res/layout/activity_music_preference.xml
+++ b/app/src/main/res/layout/activity_music_preference.xml
@@ -14,7 +14,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="150dp"
         android:fontFamily="sans-serif-black"
-        android:text="WHAT SHOULD mBEATERS CALL YOU?"
+        android:text="@string/user_mBeater"
         android:textColor="@color/colorWhite"
         android:textSize="25sp"
         app:layout_constraintEnd_toEndOf="parent"
