--- a/app/src/main/res/layout/activity_music_preference.xml
+++ b/app/src/main/res/layout/activity_music_preference.xml
@@ -11,10 +11,12 @@
         android:id="@+id/pref_heading"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
+        android:layout_marginStart="40dp"
         android:layout_marginTop="150dp"
+        android:layout_marginEnd="24dp"
         android:fontFamily="sans-serif-black"
         android:text="@string/select_your_music_preferences"
+        android:textAllCaps="true"
         android:textColor="@color/colorWhite"
         android:textSize="25sp"
         app:layout_constraintEnd_toEndOf="parent"
