--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="colorAccent">#F05E23</color>
     <color name="colorWhite">#FFFFFF</color>
     <color name="colorTransparent">#CCCCCC</color>
+
+    <color name="black_overlay">#66000000</color>
 </resources>
