--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#F05E23</color>
+    <color name="colorPrimary">#F0892D</color>
     <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#F05E23</color>
+    <color name="colorAccent">#F0892D</color>
     <color name="colorWhite">#FFFFFF</color>
     <color name="colorTransparent">#CCCCCC</color>
 
