--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,6 @@
     <color name="colorAccent">#F0892D</color>
     <color name="colorWhite">#FFFFFF</color>
     <color name="colorTransparent">#CCCCCC</color>
-
+    <color name="black_shade">#800C0C0C</color>
     <color name="black_overlay">#66000000</color>
 </resources>
