add custom text for the fragments

--- a/app/src/main/res/layout/activity_music_list.xml
+++ b/app/src/main/res/layout/activity_music_list.xml
@@ -12,10 +12,11 @@
         android:layout_height="wrap_content"
         android:gravity="top"
         android:keepScreenOn="true"
-        android:src="@drawable/beat"
+        android:src="@mipmap/beat"
         android:layout_marginStart="20dp"
         android:padding="10dp"
-        android:contentDescription="@string/music" />
+        android:contentDescription="@string/music"
+        android:layout_marginLeft="20dp" />
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -80,7 +81,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:src="@drawable/final_search"
+                android:src="@mipmap/final_search"
                 android:contentDescription="@string/music" />
 
         </LinearLayout>
