--- a/app/src/main/res/drawable/background_alpha.xml
+++ b/app/src/main/res/drawable/background_alpha.xml
@@ -4,7 +4,7 @@
     <item>
         <bitmap
             android:alpha="0.3"
-            android:src="@drawable/back_music"
+            android:src="@mipmap/back_music"
             android:gravity="fill">
 
         </bitmap>
