--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/music_three"
+    android:background="@mipmap/music_three"
     tools:context=".MainActivity">
 
 
@@ -33,7 +33,8 @@
         android:background="@android:color/transparent"
         android:textColor="@color/colorPrimary"
         android:textAllCaps="true"
-        android:text="back" />
+        android:text="@string/back"
+        android:layout_marginStart="30dp" />
 
     <Button
         android:id="@+id/nextBtn"
@@ -45,10 +46,9 @@
         android:layout_marginLeft="30dp"
         android:layout_marginEnd="30dp"
         android:background="@android:color/transparent"
-        android:text="next"
+        android:text="@string/next"
         android:textAllCaps="true"
-        android:textColor="@color/colorPrimary" />
-
-
+        android:textColor="@color/colorPrimary"
+        android:layout_alignParentEnd="true" />
 
 </RelativeLayout>
