--- a/app/src/main/res/layout/fragment_tab1.xml
+++ b/app/src/main/res/layout/fragment_tab1.xml
@@ -18,7 +18,8 @@
                app:cardBackgroundColor="#f7f7f7"
                app:cardCornerRadius="10dp"
                app:layout_constraintStart_toStartOf="parent"
-               app:layout_constraintTop_toTopOf="parent">
+               app:layout_constraintTop_toTopOf="parent"
+               android:layout_marginLeft="8dp">
 
                <ImageView
                    android:layout_width="wrap_content"
@@ -200,7 +201,8 @@
         android:textColor="@color/colorPrimary"
         android:textStyle="italic"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/qod" />
+        app:layout_constraintTop_toBottomOf="@+id/qod"
+        android:layout_marginRight="16dp" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
