--- a/app/src/main/res/layout/online_song_list.xml
+++ b/app/src/main/res/layout/online_song_list.xml
@@ -67,6 +67,7 @@
         android:textAppearance="@style/TextAppearance.AppCompat.Small"
         app:layout_constraintBottom_toBottomOf="@+id/song_artist"
         app:layout_constraintStart_toEndOf="@+id/song_artist"
-        app:layout_constraintTop_toBottomOf="@+id/song_name" />
+        app:layout_constraintTop_toBottomOf="@+id/song_name"
+        android:drawableStart="@drawable/star" />
 </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
